--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "vk-io": "^4.0.0-rc.29"
   }
 }
