--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
