--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "qs": "^6.9.1",
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
