--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node build/server.js",
     "build": "PORT=80 razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "now-start": "yarn start:prod"
   },
   "dependencies": {
     "@material-ui/core": "^4.7.1",
