--- a/now.json
+++ b/now.json
@@ -1,3 +1,21 @@
 {
-  "name": "VK-Activity"
+  "version": 2,
+  "name": "VK-Activity",
+  "builds": [
+    {
+      "src": "build/public/**",
+      "use": "@now/static"
+    },
+    {
+      "src": "build/server.js",
+      "use": "@now/node-server"
+    }
+  ],
+  "routes": [
+    { "src": "/assets.json", "dest": "build/assets.json" },
+    { "src": "/favicon.ico", "dest": "build/public/favicon.ico" },
+    { "src": "/robots.txt", "dest": "build/public/robots.txt" },
+    { "src": "/static/(.*)", "dest": "build/public/static/$1" },
+    { "src": "/(.*)", "dest": "build/server.js" }
+  ]
 }
